--- a/Service2-Consumer/src/main/resources/application.properties
+++ b/Service2-Consumer/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.application.name=popodos
+# All Settings for ConsumeProject
+
+spring.application.name=consumer
+server.port=8081
+
+# Kafka settings
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+# Database settings
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+
+# Hibernate settings
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
